--- a/miniprojet/tableaux/tableau-fr.html
+++ b/miniprojet/tableaux/tableau-fr.html
@@ -3,6 +3,19 @@
 		<meta charset="UTF-8"/>
 	</head>
 	<body>
-	<p>Links table</p>
-		<table>
+	<h1>Links table</h1>
+		<table border=1>
 			<tr><th>Line</th><th>Link</th><th>HTTP code</th><th>Encodage</th><th>Word number</th></tr>
+			<tr><td>1</td><td>https://fr.wikipedia.org/wiki/Robot</td><td>200</td><td>UTF-8</td><td>7580</td></tr>
+			<tr><td>2</td><td>https://fr.wikipedia.org/wiki/Robot_de_cuisine</td><td>200</td><td>UTF-8</td><td>1532</td></tr>
+			<tr><td>3</td><td>https://fr.wikipedia.org/wiki/Robot_d%27indexation</td><td>200</td><td>UTF-8</td><td>2398</td></tr>
+			<tr><td>4</td><td>https://fr.wikipedia.org/wiki/Bot_informatique</td><td>200</td><td>UTF-8</td><td>3272</td></tr>
+			<tr><td>5</td><td>https://fr.wikipedia.org/wiki/Atlas_(robot)</td><td>200</td><td>UTF-8</td><td>1528</td></tr>
+			<tr><td>6</td><td>https://roboty.magistry.fr</td><td>000</td><td>-</td><td>-</td></tr>
+			<tr><td>7</td><td>https://fr.wikipedia.org/wiki/Robot_(Leonard_de_Vinci)</td><td>404</td><td>UTF-8</td><td>597</td></tr>
+			<tr><td>8</td><td>https://fr.wiktionary.org/wiki/robot</td><td>200</td><td>utf-8</td><td>6602</td></tr>
+			<tr><td>9</td><td>https://fr.wikipedia.org/wiki/Protocole_d%27exclusion_des_robots</td><td>200</td><td>UTF-8</td><td>1461</td></tr>
+			<tr><td>10</td><td>https://fr.wikipedia.org/wiki/Robotique</td><td>200</td><td>utf-8</td><td>15058</td></tr>
+		</table>
+	</body>
+</html>
