--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
         <h1>Miniprojet</h1>
         <p>Le miniprojet consiste à extraire depuis un texte brut des liens URLs</p>
         <p>De ces URLs, nous collectons certaines données et le rend en tableau</p>
-        <a href="tableaux/tableau-fr.html">Tableau de résultat</a>
+        <a href="miniprojet/tableaux/tableau-fr.html">Tableau de résultat</a>
     </body>
  </html>
