--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
     <head>
         <meta charset="UTF-8"/>
         <title>Présentation</title>
+        <link rel="stylesheet" herf="https://cdn.jsdelivr.net/npm/bulma@1.0.4/css/bulma.min.css"/>
     </head>
     <body>
-        <h1>Miniprojet</h1>
+        <h1 class="has-text-danger-light">Miniprojet</h1>
         <p>Le miniprojet consiste à extraire depuis un texte brut des liens URLs</p>
         <p>De ces URLs, nous collectons certaines données et le rend en tableau</p>
-        <a href="miniprojet/tableaux/tableau-fr.html">Tableau de résultat</a>
+        <a class="button is-ghost" href="miniprojet/tableaux/tableau-fr.html">Tableau de résultat</a>
     </body>
  </html>
