Test Bulma et ajout cours

--- a/index.html
+++ b/index.html
@@ -3,12 +3,23 @@
     <head>
         <meta charset="UTF-8"/>
         <title>Présentation</title>
-        <link rel="stylesheet" herf="https://cdn.jsdelivr.net/npm/bulma@1.0.4/css/bulma.min.css"/>
+        <link rel="stylesheet" href="assets/css/style.css"/>
+        <link
+        rel="stylesheet"
+        href="https://cdn.jsdelivr.net/npm/bulma@1.0.2/css/versions/bulma-no-dark-mode.min.css">
     </head>
     <body>
-        <h1 class="has-text-danger-light">Miniprojet</h1>
-        <p>Le miniprojet consiste à extraire depuis un texte brut des liens URLs</p>
-        <p>De ces URLs, nous collectons certaines données et le rend en tableau</p>
-        <a class="button is-ghost" href="miniprojet/tableaux/tableau-fr.html">Tableau de résultat</a>
+        <section class="section has-text-centered">
+            <h1 class="title is-1">Miniprojet</h1>
+            <div class="block">
+                <p>Le miniprojet consiste à extraire depuis un texte brut des liens URLs</p>
+                <p>De ces URLs, nous collectons certaines données et le rend en tableau</p>
+            </div>
+            <button>
+                <a class="button" href="index.html">Accueil</a></li>
+                <a class="button is-dark" href="miniprojet/tableaux/tableau-fr.html">Tableau</a></li>
+            </button>
+        </section>
+        
     </body>
  </html>
