Modification Miniprojet 3 - fin

--- a/index.html
+++ b/index.html
@@ -15,9 +15,10 @@
                 <p>Le miniprojet consiste à extraire depuis un texte brut des liens URLs</p>
                 <p>De ces URLs, nous collectons certaines données et le rend en tableau</p>
             </div>
-            <button>
-                <a class="button" href="index.html">Accueil</a></li>
-                <a class="button is-dark" href="miniprojet/tableaux/tableau-fr.html">Tableau</a></li>
+            <button class="block">
+                <a class="button accueil_index" href="index.html">Accueil</a>
+                <a class="button script">Script</a>
+                <a class="button is-dark tablo_index" href="miniprojet/tableaux/tableau-fr.html">Tableau</a>
             </button>
         </section>
         
